// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic comment display 1`] = `
.emotion-0 {
  margin-top: 1em;
}

.emotion-1 {
  border-bottom: 1px solid var(--black);
}

.emotion-2 {
  text-align: center;
}

.emotion-3 {
  list-style-type: none;
  margin: 2em 0 0 0;
  padding: 0;
}

.emotion-4 {
  margin-top: 1em;
}

.emotion-4 p:last-of-type {
  margin-bottom: 0;
}

.emotion-5 {
  font-size: 0.75em;
  background-color: var(--caption);
  color: white;
  border-radius: 5px;
  padding: 0.1em 0.2em;
}

.emotion-6 {
  font-style: italic;
}

<div
  class="emotion-0"
>
  <h4
    class="emotion-1"
  >
    Comments
  </h4>
  <div
    class="emotion-2"
  >
    <p>
      Sign in with google to leave a comment of your own:
    </p>
    <input
      alt="Sign in with Google"
      height="46"
      src="/googlesignin.png"
      type="image"
      width="191"
    />
  </div>
  <ul
    class="emotion-3"
  >
    <li>
      <div
        class="emotion-4"
      >
        <div>
          
          <i>
             
            Mike D
             
          </i>
          <span
            aria-label="Solved without helpers"
            role="img"
            title="Solved without helpers"
          >
            🤓
          </span>
          <span
            class="emotion-5"
          >
            55s
          </span>
           · 
          <span
            class="emotion-6"
            title="2020-08-01T07:00:00.000Z"
          >
            1 day ago
             
          </span>
        </div>
        <div>
          <div
            class="paragraph"
          >
            my first comment
          </div>
        </div>
        
        
      </div>
    </li>
  </ul>
</div>
`;

exports[`comment with username display 1`] = `
.emotion-0 {
  margin-top: 1em;
}

.emotion-1 {
  border-bottom: 1px solid var(--black);
}

.emotion-2 {
  text-align: center;
}

.emotion-3 {
  list-style-type: none;
  margin: 2em 0 0 0;
  padding: 0;
}

.emotion-4 {
  margin-top: 1em;
}

.emotion-4 p:last-of-type {
  margin-bottom: 0;
}

.emotion-5 {
  font-size: 0.75em;
  background-color: var(--caption);
  color: white;
  border-radius: 5px;
  padding: 0.1em 0.2em;
}

.emotion-6 {
  font-style: italic;
}

<div
  class="emotion-0"
>
  <h4
    class="emotion-1"
  >
    Comments
  </h4>
  <div
    class="emotion-2"
  >
    <p>
      Sign in with google to leave a comment of your own:
    </p>
    <input
      alt="Sign in with Google"
      height="46"
      src="/googlesignin.png"
      type="image"
      width="191"
    />
  </div>
  <ul
    class="emotion-3"
  >
    <li>
      <div
        class="emotion-4"
      >
        <div>
          
          <i>
             
            <a
              href="/MikeD"
            >
              Mike D
            </a>
             
          </i>
          <span
            aria-label="Solved without helpers"
            role="img"
            title="Solved without helpers"
          >
            🤓
          </span>
          <span
            class="emotion-5"
          >
            55s
          </span>
           · 
          <span
            class="emotion-6"
            title="2020-08-01T07:00:00.000Z"
          >
            1 day ago
             
          </span>
        </div>
        <div>
          <div
            class="paragraph"
          >
            my first comment
          </div>
        </div>
        
        
      </div>
    </li>
  </ul>
</div>
`;
